# dataset-tag-editor-standalone

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: config.py  interface.py  launch.bat  launch.py
scripts/dataset_tag_editor/: custom_scripts.py  dataset.py  dte_logic.py  filters.py  kohya_finetune_metadata.py  taggers_builtin.py
scripts/dataset_tag_editor/interrogators/: blip2_captioning.py  blip_large_captioning.py  git_large_captioning.py
scripts/ui/: block_blip_settings.py  block_dataset_gallery.py  block_load_dataset.py  block_tag_filter.py  block_tag_select.py  block_toprow.py  tab_batch_edit_captions.py  tab_filter_by_selection.py  tab_filter_by_tags.py  tab_move_or_delete_files.py
